# nfl-mcp

./: .coverage  .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  ROADMAP.md  coverage.xml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml  docker.yml  publish.yml
infra/: azuredeploy.json
nfl_mcp/: __init__.py  cli.py  config.py  database.py  ingest.py  registry.py  schema_pbp.py  server.py  tools.py
tests/: conftest.py  test_cli.py  test_config.py  test_database.py  test_ingest.py  test_registry.py  test_safety.py  test_server.py  test_tools.py  test_tools_unit.py
